[project]
name = "pointnet-pointnet2-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.11.0.86",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]

[tool.setuptools]
    include_package_data = true
    packages = ["data_utils", "log", "models", "visualizer"]

[tool.setuptools.package-data]
    log = ["log/**/*.pth"]
